--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "morgan": "~1.9.1",
+    "errorhandler": "^1.5.1",
     "express": "^4.17.3",
     "express-validator": "^6.14.0",
     "mongoose": "^6.2.2",
+    "morgan": "~1.9.1",
+    "rotating-file-stream": "^3.0.2",
     "swagger-ui-express": "^4.3.0",
     "validator": "^13.7.0"
   },
