--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,11 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
+env:
+  COLLECTION_NAME: ${{ secrets.COLLECTION_NAME }}
+  CONNECTION_STRING: ${{ secrets.CONNECTION_STRING }}
+  DB_NAME: ${{ secrets.DB_NAME }}
+  
 jobs:
   build:
     runs-on: ubuntu-latest
