changing npm start

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "test"
   },
   "scripts": {
-    "start": "node ./src/bin/www",
+    "start": "node src/app.js",
     "seed": "node seedDB.js --trace-warnings",
     "pretest": "npm run seed",
     "test": "mocha test --timeout 10000 --exit"
