--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
       CONNECTION_STRING: ${{ secrets.CONNECTION_STRING }}
       DB_NAME: ${{ secrets.DB_NAME }}
       HEROKU_APP_URL: ${{ secrets.HEROKU_APP_URL }}
+      NODE_ENV: production
 
     strategy:
       matrix:
