CD from GH Actions

--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -1,4 +1,4 @@
-name: CI Staging
+name: CI/CD Staging
 on:
   push:
     branches: [develop]
@@ -15,6 +15,17 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
+      - name: Heroku staging deploy
+        uses: akhileshns/heroku-deploy@v3.12.12
+          with:
+            heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+            heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
+            heroku_email: ${{secrets.HEROKU_EMAIL}}
+            healthcheck: ${{secrets.HEROKU_APP_HEALTHCHECK}}
+            delay: 5
+            dontautocreate: true
+
       - uses: actions/setup-node@v2
         with:
           node-version: "14"
