--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,4 +1,4 @@
-name: CI Production
+name: CI/CD Production
 on:
   push:
     branches: [main]
@@ -7,7 +7,6 @@ on:
 
 jobs:
   build:
-    environment: production
     runs-on: ubuntu-latest
 
     env:
@@ -15,6 +14,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
+      - uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
+          heroku_app_name: tldv-video-api
+          healthcheck: https://tldv-video-api.herokuapp.com/api/healthcheck
+          delay: 5
+          dontautocreate: true
+
       - uses: actions/setup-node@v2
         with:
           node-version: "14"
