--- a/assets/mongo-seed/Dockerfile
+++ b/assets/mongo-seed/Dockerfile
@@ -1,4 +1,4 @@
 FROM mongo
 
 COPY init.json /init.json
-CMD mongoimport --host mongodb --db tldv --collection videos --type json --file /init.json --jsonArray
+CMD mongoimport --host mongodb --db test --collection videos --type json --file /init.json --jsonArray
